Use sequenced-collection accessors for reference ends
Replace get(0) and get(size() - 1) with getFirst() and getLast() on the
connection reference lists in alignConnectionReferenceEndpoints and in the
Issue3049Test endpoint characterization.

Both bundles target JavaSE-21, and the surrounding instantiation code already
uses these accessors on EMF ELists, so this only makes the intent of reading
the ends of the reference chain explicit. Behavior is unchanged: the
production site keeps its isEmpty guard, and the test lists are non-empty by
construction.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>